# Scanner

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
benches/: .dockerignore  Cargo.toml  Dockerfile  readme.md
benches/benches/: analysis.rs
benches/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  config.rs  error_log.rs  lib.rs  main.rs  output.rs  ui.rs
crates/cli/src/plugins/: mod.rs
crates/cli/src/rules/: mod.rs
crates/cli/src/scan/: mod.rs
crates/cli/tests/: baseline.rs  chunk_size.rs  config.rs  debug.rs  default_exclusions.rs  error_log.rs  exclude.rs  fail_on.rs  failed_files.rs  ignore.rs  invalid_format.rs  metrics.rs  plugins.rs  quiet.rs  rule_dirs_config.rs  rules.rs  rules_dir.rs  rules_install.rs  rules_remove.rs  sarif.rs  scan.rs  severity.rs  stream.rs  symlink.rs  threads.rs
crates/debugger/: Cargo.toml  README.md
crates/debugger/src/: callgraph.rs  lib.rs  main.rs  taint.rs  timeline.rs  toolkit.rs  visualization.rs
crates/debugger/tests/: events.rs  ir_exports.rs
crates/debugger/tests/snapshots/: events__debug_events_json.snap  events__debug_events_text.snap  ir_exports__ast_to_dot.snap  ir_exports__ast_to_json.snap  ir_exports__cfg_to_dot.snap  ir_exports__cfg_to_json.snap  ir_exports__ssa_to_dot.snap  ir_exports__ssa_to_json.snap
crates/engine/: Cargo.toml  README.md
crates/engine/src/: cache.rs  cfg.rs  debug.rs  dfg.rs  function_taint.rs  hash.rs  lib.rs  path.rs  pattern.rs  regex_ext.rs
crates/engine/src/cache/: mod.rs  rule_cache.rs
crates/engine/src/dataflow/: mod.rs
crates/engine/src/plugin/: managed.rs  manager.rs  mod.rs  proc_plugin.rs  worker.rs
crates/engine/tests/: cache.rs  examples_dynamic.rs  plugin_manager.rs  taint.rs
crates/engine/tests/unit/: baseline.rs  canonical.rs  cfg.rs  dedup.rs  dfg.rs  examples_rules.rs  function_taint.rs  hash.rs  java.rs  mod.rs  path.rs  pattern.rs  python.rs  semgrep.rs  stream.rs  suppress.rs  taint.rs  timeout.rs  wasm.rs
crates/ir/: Cargo.toml  README.md
crates/ir/src/: ast.rs  cfg.rs  dfg.rs  lib.rs
crates/ir/src/tests/: mod.rs
crates/loader/: Cargo.toml  README.md
crates/loader/src/: lib.rs  matchers.rs  regex_types.rs  walk.rs
crates/loader/src/schema/: compiled.rs  json.rs  mod.rs  semgrep.rs  yaml.rs
crates/loader/tests/: duplicate.rs  interfile.rs  severity.rs
crates/parsers/: Cargo.toml  README.md
crates/parsers/src/: catalog.rs  lib.rs
crates/parsers/src/languages/: dockerfile.rs  generic.rs  go.rs  hcl.rs  javascript.rs  json.rs  mod.rs  ruby.rs  typescript.rs
crates/parsers/src/languages/java/: ast.rs  catalog.rs  dfg_builder.rs  mod.rs  parser.rs  symbol_table.rs  tokens.rs
crates/parsers/src/languages/java/tests/: field_array_dfg.rs  interproc.rs  l1.rs  l1_ir.rs  l2.rs  l3.rs  l3_dfg.rs  l4_interproc.rs  l5.rs  l6.rs  l7.rs  lambda_dfg.rs  mod.rs  project.rs
crates/parsers/src/languages/php/: catalog.rs  mod.rs
crates/parsers/src/languages/php/tests/: l1.rs  l1_flow.rs  l2.rs  l2_aliasing.rs  l3.rs  l3_dfg.rs  l4.rs  l4_interproc.rs  l5.rs  l6_props_arrays.rs  l7_project.rs  mod.rs
crates/parsers/src/languages/python/: ast.rs  catalog.rs  dfg_builder.rs  mod.rs  symbol_table.rs  tokens.rs
crates/parsers/src/languages/python/tests/: async_.rs  l1.rs  l1_2.rs  l1_3.rs  l2.rs  l3.rs  l4.rs  l5.rs  l6.rs  l7.rs  l7_robustez.rs  l8.rs  l9.rs  mod.rs
crates/parsers/src/languages/rust/: ast_builder.rs  catalog.rs  dfg_builder.rs  imports.rs  ir_builder.rs  mod.rs  symbols.rs
crates/parsers/src/languages/rust/tests/: invalid.rs  l1_ir.rs  l2.rs  l3.rs  l3_dfg.rs  l3_result_macro.rs  l3_sanitizers.rs  l3_unsafe.rs  l4.rs  l5.rs  l6.rs  l7.rs  mod.rs
crates/parsers/src/languages/yaml/: mod.rs
crates/parsers/src/languages/yaml/tests/: l1_merges.rs  mod.rs
crates/parsers/tests/: flow_detection.rs  generic.rs  match_flows.rs  rust_project.rs
crates/patterns/: Cargo.toml
crates/patterns/src/: lib.rs
crates/plugin_core/: Cargo.toml  README.md
crates/plugin_core/docs/: readme.md
crates/plugin_core/docs/messages/: error.handling.md  file.analyze.md  file.transform.md  plugin.init.md  plugin.log.md  plugin.ping.md  plugin.shutdown.md  repo.discover.md  rules.get.md  rules.list.md  scan.report.md
crates/plugin_core/examples/: legacy.rs  mock.rs
crates/plugin_core/src/: discovery.rs  lib.rs  limits.rs  plugin_manager.rs  protocol.rs
crates/plugin_core/tests/: plugin_manager.rs  plugins.rs
crates/rego_wasm/: Cargo.toml  README.md
crates/rego_wasm/src/: lib.rs
crates/rego_wasm/tests/: limits.rs
crates/reporters/: Cargo.toml  README.md
crates/reporters/src/: lib.rs  sarif.rs
crates/reporters/src/tests/: color.rs  mod.rs  plugins.rs  print_findings.rs
docs/architecture/: high-level.md  low-level.md
docs/architecture/crates/: engine.md  ir.md  loader.md  rego_wasm.md  reporters.md  rootcause.md
examples/fixtures/go/: bad.go  good.go
examples/fixtures/json/: print_findings.json
examples/fixtures/ruby/: bad.rb  good.rb
examples/fixtures/sarif/: basic.sarif.json  print_findings.sarif.json
examples/fixtures/yaml/: alias_bad.yaml  alias_good.yaml  merge_bad.yaml  merge_good.yaml
examples/plugins/: README.md
examples/plugins/analyze/: README.md
examples/plugins/discover/: README.md
examples/plugins/report/: README.md
examples/plugins/rules/: README.md
examples/plugins/transform/: README.md
examples/rules/: metavariable-pattern.yaml  pattern-regex.yaml
examples/rules/code/: README.md  rule.yaml
examples/rules/config/: README.md  no-default-password.json  opa-style.json
examples/rules/docker/: rule.yaml
examples/rules/java/: SANITIZERS.md  rule.yaml
examples/rules/javascript/: rule.yaml
examples/rules/opa/: docker-security.rego  docker-security.wasm  docker-security.wasm.json  javascript-security.rego  javascript-security.wasm  javascript-security.wasm.json  python-security.rego  (+5 more)
examples/tests/: README.md
fuzz/: .gitignore  Cargo.toml  readme.md  run-all.sh
fuzz/fuzz_targets/: dockerfile.rs  python.rs  yaml.rs
(+246 files in other folders)
