[workspace]
members = [
    "crates/cli",
    "crates/loader",
    "crates/engine",
    "crates/ir",
    "crates/parsers",
    "crates/reporters",
    "crates/rego_wasm",
    "benches",
    "crates/plugin_core",
    "crates/debugger",
]

default-members = [
    "crates/cli",
    "crates/loader",
    "crates/engine",
    "crates/ir",
    "crates/parsers",
    "crates/reporters",
    "crates/rego_wasm",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0"
authors = ["M3str3 <M3str3@rootcause.sh>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
rayon = "1"
'serde-sarif' = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
shlex = "1"
base64 = "0.21"
fancy-regex = "0.11"
pcre2 = "0.2"
