[package]
name = "rootcause"
version = "1.0.0"
edition = "2021"
description = "Command-line interface for the RootCause static analysis toolkit"
readme = "README.md"
license.workspace = true
repository = "https://github.com/rootcausescan/scanner"
homepage = "https://github.com/rootcausescan/scanner"
keywords = ["security", "sast", "static-analysis"]
categories = ["command-line-utilities", "development-tools", "code-analysis"]

[[bin]]
name = "rootcause"
path = "src/main.rs"

[dependencies]
parsers = { path = "../parsers" }
loader = { path = "../loader" }
engine = { path = "../engine" }
reporters = { path = "../reporters" }
ir = { path = "../ir" }
plugin_core = { path = "../plugin_core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
shlex = { workspace = true }
base64 = { workspace = true }
toml = "0.8"
colored = "2.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_yaml = { workspace = true }
