[package]
name = "parsers"
version = "1.0.0"
edition = "2021"
description = "Parsers that convert source files into RootCause IR"
readme = "README.md"
license.workspace = true
repository = "https://github.com/rootcausescan/scanner"
homepage = "https://github.com/rootcausescan/scanner"
keywords = ["security", "sast", "static-analysis"]
categories = ["development-tools", "code-analysis"]

[dependencies]
anyhow = "1"
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true,  features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
ir = { path = "../ir" }
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-java = "0.20"
tree-sitter-php = "0.20"
marked-yaml = "0.8"
hcl-edit = "0.9"
tracing = { workspace = true }
blake3 = "1"

[dev-dependencies]
tempfile = "3"

