[package]
name = "plugin_core"
version = "1.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared utilities for building RootCause plugins"
readme = "README.md"
repository = "https://github.com/rootcausescan/scanner"
homepage = "https://github.com/rootcausescan/scanner"
keywords = ["security", "sast", "static-analysis"]
categories = ["development-tools", "code-analysis"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = "1"
toml = "0.8"
shlex = { workspace = true }
jsonschema = "0.17"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
